force-app/main/default/objects/Idea__c/Idea__c.object-meta.xml
<CustomObject>
    <label>Idea</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Idea #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>