force-app/main/default/objects/Idea__c/fields/Action_Details__c.field-meta.xml
<CustomField>
    <fullName>Action_Details__c</fullName>
    <label>Action Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>