force-app/main/default/objects/Idea__c/fields/Actual_Release__c.field-meta.xml
<CustomField>
    <fullName>Actual_Release__c</fullName>
    <label>Actual Release</label>
    <type>Date</type>
</CustomField>