force-app/main/default/objects/Idea__c/fields/CPI__c.field-meta.xml
<CustomField>
    <fullName>CPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPI</label>
    <type>Checkbox</type>
</CustomField>