force-app/main/default/objects/Idea__c/fields/Current_Environment__c.field-meta.xml
<CustomField>
    <fullName>Current_Environment__c</fullName>
    <label>Current Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>QAS</fullName>
            </value>
            <value>
                <fullName>PreProd</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>