force-app/main/default/objects/Idea__c/fields/Downvotes__c.field-meta.xml
<CustomField>
    <fullName>Downvotes__c</fullName>
    <label>Downvotes</label>
    <summaryFilterItems>
        <field>Vote__c.Type__c</field>
        <operation>equals</operation>
        <value>Down</value>
    </summaryFilterItems>
    <summaryForeignKey>Vote__c.Idea__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>