force-app/main/default/objects/Idea__c/fields/ERB__c.field-meta.xml
<CustomField>
    <fullName>ERB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERB</label>
    <type>Checkbox</type>
</CustomField>