force-app/main/default/objects/Idea__c/fields/Man_Days__c.field-meta.xml
<CustomField>
    <fullName>Man_Days__c</fullName>
    <label>Man Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>