force-app/main/default/objects/Idea__c/fields/Mini_Project__c.field-meta.xml
<CustomField>
    <fullName>Mini_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mini-Project</label>
    <type>Checkbox</type>
</CustomField>