force-app/main/default/objects/Idea__c/fields/Pilot__c.field-meta.xml
<CustomField>
    <fullName>Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot</label>
    <type>Checkbox</type>
</CustomField>