force-app/main/default/objects/Idea__c/fields/Progress_Update__c.field-meta.xml
<CustomField>
    <fullName>Progress_Update__c</fullName>
    <label>Progress Update</label>
    <length>144</length>
    <type>Text</type>
</CustomField>