force-app/main/default/objects/Idea__c/fields/RFC_Number__c.field-meta.xml
<CustomField>
    <fullName>RFC_Number__c</fullName>
    <label>RFC Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>