force-app/main/default/objects/Idea__c/fields/SGT__c.field-meta.xml
<CustomField>
    <fullName>SGT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SGT</label>
    <type>Checkbox</type>
</CustomField>