force-app/main/default/objects/Idea__c/fields/Target_Release__c.field-meta.xml
<CustomField>
    <fullName>Target_Release__c</fullName>
    <label>Target Release</label>
    <type>Date</type>
</CustomField>