force-app/main/default/objects/Idea__c/fields/Upvotes__c.field-meta.xml
<CustomField>
    <fullName>Upvotes__c</fullName>
    <label>Upvotes</label>
    <summaryFilterItems>
        <field>Vote__c.Type__c</field>
        <operation>equals</operation>
        <value>Up</value>
    </summaryFilterItems>
    <summaryForeignKey>Vote__c.Idea__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>