force-app/main/default/objects/Idea__c/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <label>User Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SGT</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>