force-app/main/default/objects/Idea__c/validationRules/Object_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Object_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(Object__c)),

OR(
    ISPICKVAL( Stage__c , &quot;Committee&quot;),
    ISPICKVAL( Stage__c , &quot;Scheduled&quot;),
    ISPICKVAL( Stage__c , &quot;Building&quot;),
    ISPICKVAL( Stage__c , &quot;Testing&quot;),
    ISPICKVAL( Stage__c , &quot;Approved&quot;),
    ISPICKVAL( Stage__c , &quot;Deployed&quot;)))</errorConditionFormula>
    <errorDisplayField>Object__c</errorDisplayField>
    <errorMessage>Object field must be populated.</errorMessage>
</ValidationRule>