force-app/main/default/objects/Idea__c/validationRules/Target_Release_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_Release_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Target_Release__c ),
OR(
    ISPICKVAL( Stage__c , &quot;Building&quot;),
    ISPICKVAL( Stage__c , &quot;Testing&quot;),
    ISPICKVAL( Stage__c , &quot;Approved&quot;),
    ISPICKVAL( Stage__c , &quot;Deployed&quot;)))</errorConditionFormula>
    <errorDisplayField>Target_Release__c</errorDisplayField>
    <errorMessage>Target Release field must be populated.</errorMessage>
</ValidationRule>