force-app/main/default/objects/Idea__c/listViews/All_Deferred_Ideas.listView-meta.xml
<ListView>
    <fullName>All_Deferred_Ideas</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Object__c</columns>
    <columns>Priority__c</columns>
    <columns>Stage__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Deferred</value>
    </filters>
    <label>All Deferred Ideas</label>
</ListView>