force-app/main/default/objects/Idea__c/listViews/All_Deployed_Ideas.listView-meta.xml
<ListView>
    <fullName>All_Deployed_Ideas</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Object__c</columns>
    <columns>Priority__c</columns>
    <columns>Stage__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Deployed</value>
    </filters>
    <label>All Deployed Ideas</label>
</ListView>