force-app/main/default/objects/Idea__c/listViews/All_Ideas.listView-meta.xml
<ListView>
    <fullName>All_Ideas</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Object__c</columns>
    <columns>Priority__c</columns>
    <columns>Stage__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Requester__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Ideas</label>
</ListView>