force-app/main/default/objects/Idea__c/listViews/Ideas_for_Committee_review.listView-meta.xml
<ListView>
    <fullName>Ideas_for_Committee_review</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Stage__c</columns>
    <columns>Man_Days__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Requester__c</columns>
    <columns>Target_Release__c</columns>
    <columns>Progress_Update__c</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Committee</value>
    </filters>
    <label>Ideas for Committee review</label>
</ListView>